syntax = "proto3";

package drillbit.protobuf;

message KNeighborsClassifier {
  bool dense = 1;
  int32 dims = 2;
  int32 n = 3;
  string metric = 4;
  string weight = 5;
  string algorithm = 6;

  repeated LabelAndCoordinates label2Coordinates = 7;

  message LabelAndCoordinates {
    string label = 1;
    bytes coordinates = 2;
  }
}